light_clone/tests/ui/enum_struct_string_field.stderr
error[E0277]: the trait bound `String: LightClone` is not satisfied
 --> tests/ui/enum_struct_string_field.rs:6:11
  |
3 | #[derive(LightClone)]
  |          ---------- required by a bound introduced by this call
...
6 |     Bad { s: String }, // String does not implement LightClone
  |           ^ the trait `LightClone` is not implemented for `String`
  |
help: consider borrowing here
  |
6 |     Bad { &s: String }, // String does not implement LightClone
  |           +
